# COMP6011

./: .gitignore
Assignment 1/Charts/: system_architecture.puml
Assignment 1/PIDNet/tools/: custom.py  eval.py  train.py
Assignment 1/PIDNet/utils/: device.py  function.py
Assignment 1/SeaFormer/seaformer-seg/: main.py  pyproject.toml
Assignment 1/detr/: config.yaml
Assignment 1/detr/benchmark_results/: best_benchmark.json
Assignment 1/runs/detect/train/: args.yaml
Assignment 1/yolo/: benchmark.py  main.py  pyproject.toml
Assignment 1/yolo/benchmark_results/: best_benchmark.json
Assignment 2/: plot_results.py  pyproject.toml
Assignment 2/end_to_end/: README.md  Student Assignment 10 Cases.xlsx  pyproject.toml  run_eval.py
Assignment 2/end_to_end/outputs/: confusion_matrix.csv  metrics.json  predictions.csv  raw_outputs.jsonl  run_config.json
Assignment 2/figures/: final_design_architecture.puml  poc_architecture.puml
Assignment 2/structured_cue_extraction/: pyproject.toml  run_eval.py
Assignment 2/structured_cue_extraction/outputs/: confusion_matrix.csv  metrics.json  predictions.csv  raw_outputs.jsonl  run_config.json
Charts/: objectDetection.py  pyproject.toml  semanticSegmentation.py
PIDNet/: main.py  pyproject.toml
PIDNet/models/speed/: pidnet_speed.py
SeaFormer/seaformer-seg/: pyproject.toml  requirements.txt
SeaFormer/seaformer-seg/tools/: dist_test.sh
detr/: benchmark.py  pyproject.toml
runs/detect/train/: results.csv
yolo/: benchmark.py  pyproject.toml
yolo/benchmark_results/: yolo26n_benchmark.json
