[project]
name = "seaformer-seg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cityscapesscripts>=2.2.4",
    "codecov>=2.1.13",
    "flake8>=7.3.0",
    "interrogate>=1.7.0",
    "isort==4.3.21",
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "packaging>=26.0",
    "prettytable>=3.17.0",
    "pytest>=9.0.2",
    "xdoctest>=0.10.0",
    "yapf>=0.43.0",
]
