[project]
name = "seaformer-seg"
version = "0.1.0"
description = "SeaFormer Segmentation"
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
    "torch==2.1.0",
    "torchvision==0.16.0",
    "mmcv-full==1.7.2",
    "mmsegmentation==0.30.0",
    "setuptools<70.0.0",    # CRITICAL: Fixes the pkg_resources error
    "numpy<2.0.0",
    "cityscapesscripts>=2.2.4",
    "matplotlib>=3.7.0",
    "yapf==0.40.1",
    "prettytable",
    "packaging",
    "scipy",
    "addict",
]

[tool.uv]
index-url = "https://pypi.org/simple"
# This tells uv to ONLY resolve for Linux, ignoring Mac/Windows errors

[tool.uv.sources]
mmcv-full = { url = "https://download.openmmlab.com/mmcv/dist/cu121/torch2.1.0/mmcv_full-1.7.2-cp310-cp310-manylinux1_x86_64.whl" }

[tool.uv.extra-build-dependencies]
# Fix: Use setuptools instead of pkg-resources
mmcv-full = ["setuptools"]

[dev-dependencies]
pytest = ">=8.0.0"
flake8 = ">=7.0.0"
isort = "4.3.21"